packages/ui/assets/css/components/filter-month.css
.aw-filter-month {
    @apply inline-flex;

    & > &__prev {
        @apply rounded-r-none;
    }

    & > &__next {
        @apply rounded-l-none;
    }

    & &__date {
        @apply px-4 self-stretch leading-none flex flex-col justify-center border-t border-b;
        border-color: theme('borderColor.default');
        min-width: 115px;
    }

    & &__label {
        @apply text-xs text-disabled mb-1;
    }
}

